--- a/biostatistics.html
+++ b/biostatistics.html
@@ -167,15 +167,15 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n9kIXMwp'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n9kIXMwp'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oQzfbfwz'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-4417'>Principal Biostatistician - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-4417'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-10-01</p>
 <hr/>
@@ -193,7 +193,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.mdanderson.org/search/jobdetails/research-assistant-i-radiation-oncology-biostatistics/b0204d6a-2a19-41e2-b325-e5311c691166?s_cid=ssTW'>Research Assistant I, Radiation Oncology Biostatistics | Houston, TX | MD Anderson</a></h5> 
+<h5><a href='https://jobs.mdanderson.org/search/jobdetails/research-assistant-i-radiation-oncology-biostatistics/b0204d6a-2a19-41e2-b325-e5311c691166?s_cid=ssTW'>Research Assistant I, Radiation Oncology Biostatistics | Houston, TX | MD Anderson</a></h5> 
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -227,7 +227,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
+<h5><a href='https://boards.greenhouse.io/licor/jobs/1837383'>Job Application for Sales Consultant, Bio (United States, Atlanta based) at LI-COR</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -261,7 +261,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ultragenyx/a2e3a3ca-c8dc-4b74-94f9-00ef34a87955'>Ultragenyx Pharmaceutical Inc. - Director, Biostatistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ultragenyx/a2e3a3ca-c8dc-4b74-94f9-00ef34a87955'>Ultragenyx Pharmaceutical Inc. - Director, Biostatistics</a></h5> 
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -299,7 +299,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">K?ln, Germany</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/deciphera/77f4a994-2f52-4281-a127-b5357d71dc04'>Deciphera Pharmaceuticals - Associate Director of Biostatistics</a></h5> 
+<h5><a href='https://jobs.lever.co/deciphera/77f4a994-2f52-4281-a127-b5357d71dc04'>Deciphera Pharmaceuticals - Associate Director of Biostatistics</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -388,7 +388,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p>Aug 11, 2019 ... The Advanced Biostatistics & Data Analytics (ABDA) Centre of Excellence is part 
 of the Biostatistics department in the R&D Development organisation.</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/153346D349'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Remote - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/153346D349'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
@@ -416,7 +416,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-16</p>
 <hr/>
-<h5><a href='https://uscareers-prahs.icims.com/jobs/54099/principal-biostatistician/job'>Principal Biostatistician in</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54099/principal-biostatistician/job'>Principal Biostatistician in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 8, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
